# 3D-Orbital-Trajectory-Animator

./: .gitignore  AGENTS.md  README.md  index.html  orbit.css  orbit.html  orbit.ipynb  pyproject.toml
docs/: custom.css  index.html
docs/orbit_files/libs/bootstrap/: bootstrap-71ffffcf2cde2f8da55c6de694be0aaf.min.css  bootstrap-a6f90248776ca0d86a58707edc177da6.min.css
scripts/: ground_track.py  hohmann.py  j2_precession.py  leo.py  molniya.py  multi_orbit.py
src/orbital/: __init__.py  animate.py  arrow3d.py  config.py  core.py  interactive.py  sweep.py
