[project]
name = "3d-orbital-trajectory-animator"
version = "0.1.0"
description = "3D Keplerian orbit visualizations with Python and PyAstronomy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyastronomy>=0.25.0",
    "scipy>=1.17.1",
]

[tool.setuptools.packages.find]
where = ["src"]
